@@ -1,6 +1,7 @@
 0.7 "" (released xx.xx.xxxx)
 
   * Added support for ALZIP (.alz) archives.
+  * Added support for ARC (.arc) archives.
 
 0.6 "Waking Ned" (released 6.3.2010)
 
